--- a/src/UI/sd-ui/src/components/widgets/AiRecordWidget.css
+++ b/src/UI/sd-ui/src/components/widgets/AiRecordWidget.css
@@ -26,7 +26,8 @@ em + .league-records {
 .pick-record-table {
   width: 100%;
   border-collapse: collapse;
-  margin: 0.5rem 0;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .pick-record-table th,
