--- a/src/UI/sd-ui/src/components/widgets/PickRecordWidget.css
+++ b/src/UI/sd-ui/src/components/widgets/PickRecordWidget.css
@@ -15,7 +15,8 @@
 .pick-record-table {
   width: 100%;
   border-collapse: collapse;
-  margin: 0.5rem 0;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .pick-record-table th,
