--- a/src/UI/sd-ui/src/components/widgets/RankingsWidget.css
+++ b/src/UI/sd-ui/src/components/widgets/RankingsWidget.css
@@ -234,6 +234,19 @@
   }
   .rankings-table th:nth-child(2), .rankings-table td:nth-child(2) {
     padding-left: 0.2em !important;
+    max-width: 60px !important;
+    min-width: 40px !important;
+    text-align: center !important;
+  }
+  .rankings-table th:last-child, .rankings-table td:last-child {
+    max-width: 36px !important;
+    min-width: 32px !important;
+    width: 36px !important;
+    padding-left: 0.1em !important;
+    padding-right: 0.1em !important;
+  }
+  .rankings-table .team-link {
+    display: none !important;
   }
   .rankings-table th {
     font-size: 0.93em;
@@ -251,18 +264,21 @@
 }
 
 .rankings-table th:last-child, .rankings-table td:last-child {
-  min-width: 36px;
-  max-width: 40px;
+  min-width: 32px;
+  max-width: 36px;
+  width: 36px;
   text-align: center;
-  font-size: 0.92em;
+  font-size: 0.9em;
   overflow: hidden;
   text-overflow: ellipsis;
+  padding-left: 0.2rem;
+  padding-right: 0.2rem;
 }
 
 .rankings-table th:nth-child(2), .rankings-table td:nth-child(2) {
   width: auto;
-  min-width: 120px;
-  max-width: 340px;
+  min-width: 140px;
+  max-width: 360px;
   text-align: left;
 }
 
