--- a/src/UI/sd-ui/src/index.css
+++ b/src/UI/sd-ui/src/index.css
@@ -1,3 +1,9 @@
+html {
+  scroll-behavior: auto;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: auto;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +11,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overscroll-behavior: none;
 }
 
 code {
